{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 646,
  "lineage": "d6652b25-0542-687b-67eb-04261f856895",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mail_pri_instance_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c589821f2b353aa",
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:instance/i-0cf453ce0a9cf422b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf453ce0a9cf422b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mail-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0213aabcd75e801d8",
            "private_dns": "ip-10-0-10-58.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b019bb754947437",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0691ea4d94d3c48b6",
            "tags": {
              "Name": "mail-pri-instance-1a"
            },
            "tags_all": {
              "Name": "mail-pri-instance-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06139a748242bd24a"
            ]
          },
          "dependencies": [
            "aws_security_group.mail_pri_sg",
            "aws_subnet.mail_private_subnet_1a",
            "aws_subnet.mail_public_subnet_1a",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mail_pub_instance_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c589821f2b353aa",
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:instance/i-00ffd2eb488b5089f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ffd2eb488b5089f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mail-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fd246d5c1e50086",
            "private_dns": "ip-10-0-1-190.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_ip": "54.238.74.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b78d60141a430e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084f8c908d069e7f8",
            "tags": {
              "Name": "mail-pub-instance-1a"
            },
            "tags_all": {
              "Name": "mail-pub-instance-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0520e3936f330bc"
            ]
          },
          "dependencies": [
            "aws_security_group.mail_pub_sg",
            "aws_subnet.mail_public_subnet_1a",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mail_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:internet-gateway/igw-0c7791489d6206227",
            "id": "igw-0c7791489d6206227",
            "owner_id": "291701906202",
            "tags": {
              "Name": "mail-igw"
            },
            "tags_all": {
              "Name": "mail-igw"
            },
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mail_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7791489d6206227",
            "id": "r-rtb-096513cc81284fc1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096513cc81284fc1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mail_igw",
            "aws_route_table.mail_public_route_table",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mail_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:route-table/rtb-0d9b3fb975f976315",
            "id": "rtb-0d9b3fb975f976315",
            "owner_id": "291701906202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mail-private-route-table"
            },
            "tags_all": {
              "Name": "mail-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mail_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:route-table/rtb-096513cc81284fc1d",
            "id": "rtb-096513cc81284fc1d",
            "owner_id": "291701906202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mail-public-route-table"
            },
            "tags_all": {
              "Name": "mail-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mail_association_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4fb511a705d5f38",
            "route_table_id": "rtb-0d9b3fb975f976315",
            "subnet_id": "subnet-0691ea4d94d3c48b6"
          },
          "dependencies": [
            "aws_route_table.mail_private_route_table",
            "aws_subnet.mail_private_subnet_1a",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mail_association_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8d6e22e5d4c9cc6",
            "route_table_id": "rtb-0d9b3fb975f976315",
            "subnet_id": "subnet-0894c40e2d1e6ad24"
          },
          "dependencies": [
            "aws_route_table.mail_private_route_table",
            "aws_subnet.mail_private_subnet_1c",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mail_association_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d410d83cbe7b7106",
            "route_table_id": "rtb-096513cc81284fc1d",
            "subnet_id": "subnet-084f8c908d069e7f8"
          },
          "dependencies": [
            "aws_route_table.mail_public_route_table",
            "aws_subnet.mail_public_subnet_1a",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mail_association_public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0136e0b0b1feb06",
            "route_table_id": "rtb-096513cc81284fc1d",
            "subnet_id": "subnet-061c79e420810eddd"
          },
          "dependencies": [
            "aws_route_table.mail_public_route_table",
            "aws_subnet.mail_public_subnet_1c",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mail_pri_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:security-group/sg-06139a748242bd24a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06139a748242bd24a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "CustomTCP from VPC",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "IMAP from VPC",
                "from_port": 143,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 143
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "POP3 from VPC",
                "from_port": 110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 110
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SMTP from VPC",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mail_pri_sg",
            "name_prefix": "",
            "owner_id": "291701906202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mail-pri-sg"
            },
            "tags_all": {
              "Name": "mail-pri-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.mail_public_subnet_1a",
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mail_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:security-group/sg-0f0520e3936f330bc",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0520e3936f330bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mail_pub_sg",
            "name_prefix": "",
            "owner_id": "291701906202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mail-pub-sg"
            },
            "tags_all": {
              "Name": "mail-pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mail_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:subnet/subnet-0691ea4d94d3c48b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0691ea4d94d3c48b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291701906202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mail-private-subnet-1a"
            },
            "tags_all": {
              "Name": "mail-private-subnet-1a"
            },
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mail_private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:subnet/subnet-0894c40e2d1e6ad24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0894c40e2d1e6ad24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291701906202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mail-private-subnet-1c"
            },
            "tags_all": {
              "Name": "mail-private-subnet-1c"
            },
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mail_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:subnet/subnet-084f8c908d069e7f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f8c908d069e7f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291701906202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mail-public-subnet-1a"
            },
            "tags_all": {
              "Name": "mail-public-subnet-1a"
            },
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mail_public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:subnet/subnet-061c79e420810eddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061c79e420810eddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291701906202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mail-public-subnet-1c"
            },
            "tags_all": {
              "Name": "mail-public-subnet-1c"
            },
            "vpc_id": "vpc-0bff9f7cd60a260e2"
          },
          "dependencies": [
            "aws_vpc.mail_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mail_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:291701906202:vpc/vpc-0bff9f7cd60a260e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e1e808c6e4af0d7",
            "default_route_table_id": "rtb-0a85e8fcd71e886c4",
            "default_security_group_id": "sg-07ea268db966cf73d",
            "dhcp_options_id": "dopt-0d4b465af2f62fd32",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bff9f7cd60a260e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a85e8fcd71e886c4",
            "owner_id": "291701906202",
            "tags": {
              "Name": "mail-vpc"
            },
            "tags_all": {
              "Name": "mail-vpc"
            }
          }
        }
      ]
    }
  ]
}